libclamav/clamav.h

/**
 * @brief Return codes used by libclamav functions.
 */
typedef enum cl_error_t {
    /* libclamav specific */
    CL_CLEAN   = 0,
    CL_SUCCESS = 0,
    CL_VIRUS,
    CL_ENULLARG,
    CL_EARG,
    CL_EMALFDB,
    CL_ECVD,
    CL_EVERIFY,
    CL_EUNPACK,

    /* I/O and memory errors */
    CL_EOPEN,
    CL_ECREAT,
    CL_EUNLINK,
    CL_ESTAT,
    CL_EREAD,
    CL_ESEEK,
    CL_EWRITE,
    CL_EDUP,
    CL_EACCES,
    CL_ETMPFILE,
    CL_ETMPDIR,
    CL_EMAP,
    CL_EMEM,
    CL_ETIMEOUT,

    /* internal (not reported outside libclamav) */
    CL_BREAK,
    CL_EMAXREC,
    CL_EMAXSIZE,
    CL_EMAXFILES,
    CL_EFORMAT,
    CL_EPARSE,
    CL_EBYTECODE,          /** may be reported in testmode */
    CL_EBYTECODE_TESTFAIL, /** may be reported in testmode */
    CL_ELOCK,
    CL_EBUSY,
    CL_ESTATE,

    CL_VERIFIED, /** The scan target has been deemed trusted */
    CL_ERROR,    /** Unspecified / generic error */

    /* no error codes below this line please */
    CL_ELAST_ERROR
} cl_error_t;
// clang-format on

struct cl_engine;
struct cl_settings;
enum cl_engine_field {
    CL_ENGINE_MAX_SCANSIZE,        /** uint64_t */
    CL_ENGINE_MAX_FILESIZE,        /** uint64_t */
    CL_ENGINE_MAX_RECURSION,       /** uint32_t */
    CL_ENGINE_MAX_FILES,           /** uint32_t */
    CL_ENGINE_MIN_CC_COUNT,        /** uint32_t */
    CL_ENGINE_MIN_SSN_COUNT,       /** uint32_t */
    CL_ENGINE_PUA_CATEGORIES,      /** (char *) */
    CL_ENGINE_DB_OPTIONS,          /** uint32_t */
    CL_ENGINE_DB_VERSION,          /** uint32_t */
    CL_ENGINE_DB_TIME,             /** time_t */
    CL_ENGINE_AC_ONLY,             /** uint32_t */
    CL_ENGINE_AC_MINDEPTH,         /** uint32_t */
    CL_ENGINE_AC_MAXDEPTH,         /** uint32_t */
    CL_ENGINE_TMPDIR,              /** (char *) */
    CL_ENGINE_KEEPTMP,             /** uint32_t */
    CL_ENGINE_BYTECODE_SECURITY,   /** uint32_t */
    CL_ENGINE_BYTECODE_TIMEOUT,    /** uint32_t */
    CL_ENGINE_BYTECODE_MODE,       /** uint32_t */
    CL_ENGINE_MAX_EMBEDDEDPE,      /** uint64_t */
    CL_ENGINE_MAX_HTMLNORMALIZE,   /** uint64_t */
    CL_ENGINE_MAX_HTMLNOTAGS,      /** uint64_t */
    CL_ENGINE_MAX_SCRIPTNORMALIZE, /** uint64_t */
    CL_ENGINE_MAX_ZIPTYPERCG,      /** uint64_t */
    CL_ENGINE_FORCETODISK,         /** uint32_t */
    CL_ENGINE_CACHE_SIZE,          /** uint32_t */
    CL_ENGINE_DISABLE_CACHE,       /** uint32_t */
    CL_ENGINE_MAX_PARTITIONS,      /** uint32_t */
    CL_ENGINE_MAX_ICONSPE,         /** uint32_t */
    CL_ENGINE_MAX_RECHWP3,         /** uint32_t */
    CL_ENGINE_MAX_SCANTIME,        /** uint32_t */
    CL_ENGINE_PCRE_MATCH_LIMIT,    /** uint64_t */
    CL_ENGINE_PCRE_RECMATCH_LIMIT, /** uint64_t */
    CL_ENGINE_PCRE_MAX_FILESIZE,   /** uint64_t */
    CL_ENGINE_DISABLE_PE_CERTS,    /** uint32_t */
    CL_ENGINE_PE_DUMPCERTS,        /** uint32_t */
    CL_ENGINE_CVDCERTSDIR,         /** (char *) */
    CL_ENGINE_TMPDIR_RECURSION,    /** uint32_t */
    CL_ENGINE_FIPS_LIMITS,         /** uint32_t */
    CL_ENGINE_PCRE_JIT,            /** uint32_t */
};
/**
 * @brief Set a numerical engine option.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine            An initialized scan engine.
 * @param cl_engine_field   A CL_ENGINE option.
 * @param num               The new engine option value.
 * @return cl_error_t       CL_SUCCESS if successfully set.
 * @return cl_error_t       CL_EARG if the field number was incorrect.
 * @return cl_error_t       CL_ENULLARG null arguments were provided.
 */
extern cl_error_t cl_engine_set_num(struct cl_engine *engine, enum cl_engine_field field, long long num);
/**
 * @brief Get a numerical engine option.
 *
 * @param engine            An initialized scan engine.
 * @param cl_engine_field   A CL_ENGINE option.
 * @param err               (optional) A cl_error_t status code.
 * @return long long        The numerical option value.
 */
extern long long cl_engine_get_num(const struct cl_engine *engine, enum cl_engine_field field, int *err);
/**
 * @brief Set a string engine option.
 *
 * If the string option has already been set, the existing string will be free'd
 * and the new string will replace it.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine            An initialized scan engine.
 * @param cl_engine_field   A CL_ENGINE option.
 * @param str               The new engine option value.
 * @return cl_error_t       CL_SUCCESS if successfully set.
 * @return cl_error_t       CL_EARG if the field number was incorrect.
 * @return cl_error_t       CL_EMEM if a memory allocation error occurred.
 * @return cl_error_t       CL_ENULLARG null arguments were provided.
 */
extern cl_error_t cl_engine_set_str(struct cl_engine *engine, enum cl_engine_field field, const char *str);
/**
 * @brief Get a string engine option.
 *
 * @param engine            An initialized scan engine.
 * @param cl_engine_field   A CL_ENGINE option.
 * @param err               (optional) A cl_error_t status code.
 * @return const char *     The string option value.
 */
extern const char *cl_engine_get_str(const struct cl_engine *engine, enum cl_engine_field field, int *err);
/**
 * @brief Copy the settings from an existing scan engine.
 *
 * The cl_settings pointer is allocated and must be freed with cl_engine_settings_free().
 *
 * @param engine                An configured scan engine.
 * @return struct cl_settings*  The settings.
 */
extern struct cl_settings *cl_engine_settings_copy(const struct cl_engine *engine);
/**
 * @brief Apply settings from a settings structure to a scan engine.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine        A scan engine.
 * @param settings      The settings.
 * @return cl_error_t   CL_SUCCESS if successful.
 * @return cl_error_t   CL_EMEM if a memory allocation error occurred.
 */
extern cl_error_t cl_engine_settings_apply(struct cl_engine *engine, const struct cl_settings *settings);
/**
 * @brief Free a settings struct pointer.
 *
 * @param settings      The settings struct pointer.
 * @return cl_error_t   CL_SUCCESS if successful.
 * @return cl_error_t   CL_ENULLARG null arguments were provided.
 */
extern cl_error_t cl_engine_settings_free(struct cl_settings *settings);
/**
 * @brief Prepare the scanning engine.
 *
 * Call this after all required databases have been loaded and settings have
 * been applied.
 *
 * @param engine        A scan engine.
 * @return cl_error_t   CL_SUCCESS if successful.
 * @return cl_error_t   CL_ENULLARG null arguments were provided.
 */
extern cl_error_t cl_engine_compile(struct cl_engine *engine);
/**
 * @brief Add a reference count to the engine.
 *
 * Thread safety mechanism so that the engine is not free'd by another thread.
 *
 * The engine is initialized with refcount = 1, so this only needs to be called
 * for additional scanning threads.
 *
 * @param engine        A scan engine.
 * @return cl_error_t   CL_SUCCESS if successful.
 * @return cl_error_t   CL_ENULLARG null arguments were provided.
 */
extern cl_error_t cl_engine_addref(struct cl_engine *engine);
/**
 * @brief Free an engine.
 *
 * Will lower the reference count on an engine. If the reference count hits
 * zero, the engine will be freed.
 *
 * @param engine        A scan engine.
 * @return cl_error_t   CL_SUCCESS if successful.
 * @return cl_error_t   CL_ENULLARG null arguments were provided.
 */
extern cl_error_t cl_engine_free(struct cl_engine *engine);
/**
 * @brief Pre-cache callback.
 *
 * @deprecated This function is deprecated and will be removed in a future release.
 * Use `CL_SCAN_CALLBACK_PRE_HASH` with `cl_engine_set_scan_callback()` instead.
 *
 * Called for each processed file (both the entry level - AKA 'outer' - file and
 * inner files - those generated when processing archive and container files), before
 * the actual scanning takes place.
 *
 * @param fd        File descriptor which is about to be scanned.
 * @param type      File type detected via magic - i.e. NOT on the fly - (e.g. "CL_TYPE_MSEXE").
 * @param context   Opaque application provided data.
 * @return          CL_SUCCESS = File is scanned.
 * @return          CL_BREAK = Allowed by callback - file is skipped and marked as clean.
 * @return          CL_VIRUS = Blocked by callback - file is skipped and marked as infected.
 */
typedef cl_error_t (*clcb_pre_cache)(int fd, const char *type, void *context);
/**
 * @brief Set a custom pre-cache callback function.
 *
 * @deprecated This function is deprecated and will be removed in a future release.
 * Use `CL_SCAN_CALLBACK_PRE_HASH` with `cl_engine_set_scan_callback()` instead.
 *
 * Caution: changing options for an engine that is in-use is not thread-safe!
 *
 * @param engine    The initialized scanning engine.
 * @param callback  The callback function pointer.
 */
extern void cl_engine_set_clcb_pre_cache(struct cl_engine *engine, clcb_pre_cache callback);