clamav-sys/no-libclang/bindings.rs

impl cl_engine_field {
    pub const CL_ENGINE_DISABLE_PE_STATS: cl_engine_field = cl_engine_field(26);
}
impl cl_engine_field {
    pub const CL_ENGINE_STATS_TIMEOUT: cl_engine_field = cl_engine_field(27);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_PARTITIONS: cl_engine_field = cl_engine_field(28);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_ICONSPE: cl_engine_field = cl_engine_field(29);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_RECHWP3: cl_engine_field = cl_engine_field(30);
}
impl cl_engine_field {
    pub const CL_ENGINE_MAX_SCANTIME: cl_engine_field = cl_engine_field(31);
}
impl cl_engine_field {
    pub const CL_ENGINE_PCRE_MATCH_LIMIT: cl_engine_field = cl_engine_field(32);
}
impl cl_engine_field {
    pub const CL_ENGINE_PCRE_RECMATCH_LIMIT: cl_engine_field = cl_engine_field(33);
}
impl cl_engine_field {
    pub const CL_ENGINE_PCRE_MAX_FILESIZE: cl_engine_field = cl_engine_field(34);
}
impl cl_engine_field {
    pub const CL_ENGINE_DISABLE_PE_CERTS: cl_engine_field = cl_engine_field(35);
}
impl cl_engine_field {
    pub const CL_ENGINE_PE_DUMPCERTS: cl_engine_field = cl_engine_field(36);
}
#[repr(transparent)]
#[derive(Debug, Copy, Clone, Hash, PartialEq, Eq)]
pub struct cl_engine_field(pub ::std::os::raw::c_uint);
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cli_section_hash {
    pub md5: [::std::os::raw::c_uchar; 16usize],
    pub len: usize,
}
#[test]
fn bindgen_test_layout_cli_section_hash() {
    const UNINIT: ::std::mem::MaybeUninit<cli_section_hash> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cli_section_hash>(),
        24usize,
        concat!("Size of: ", stringify!(cli_section_hash))
    );
    assert_eq!(
        ::std::mem::align_of::<cli_section_hash>(),
        8usize,
        concat!("Alignment of ", stringify!(cli_section_hash))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).md5) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cli_section_hash),
            "::",
            stringify!(md5)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).len) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cli_section_hash),
            "::",
            stringify!(len)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cli_stats_sections {
    pub nsections: usize,
    pub sections: *mut cli_section_hash,
}
#[test]
fn bindgen_test_layout_cli_stats_sections() {
    const UNINIT: ::std::mem::MaybeUninit<cli_stats_sections> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cli_stats_sections>(),
        16usize,
        concat!("Size of: ", stringify!(cli_stats_sections))
    );
    assert_eq!(
        ::std::mem::align_of::<cli_stats_sections>(),
        8usize,
        concat!("Alignment of ", stringify!(cli_stats_sections))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).nsections) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cli_stats_sections),
            "::",
            stringify!(nsections)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sections) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cli_stats_sections),
            "::",
            stringify!(sections)
        )
    );
}
pub type stats_section_t = cli_stats_sections;
extern "C" {
    #[doc = " @brief Set a numerical engine option.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine            An initialized scan engine.\n @param cl_engine_field   A CL_ENGINE option.\n @param num               The new engine option value.\n @return cl_error_t       CL_SUCCESS if successfully set.\n @return cl_error_t       CL_EARG if the field number was incorrect.\n @return cl_error_t       CL_ENULLARG null arguments were provided."]
    pub fn cl_engine_set_num(
        engine: *mut cl_engine,
        field: cl_engine_field,
        num: ::std::os::raw::c_longlong,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Get a numerical engine option.\n\n @param engine            An initialized scan engine.\n @param cl_engine_field   A CL_ENGINE option.\n @param err               (optional) A cl_error_t status code.\n @return long long        The numerical option value."]
    pub fn cl_engine_get_num(
        engine: *const cl_engine,
        field: cl_engine_field,
        err: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_longlong;
}
extern "C" {
    #[doc = " @brief Set a string engine option.\n\n If the string option has already been set, the existing string will be free'd\n and the new string will replace it.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine            An initialized scan engine.\n @param cl_engine_field   A CL_ENGINE option.\n @param str               The new engine option value.\n @return cl_error_t       CL_SUCCESS if successfully set.\n @return cl_error_t       CL_EARG if the field number was incorrect.\n @return cl_error_t       CL_EMEM if a memory allocation error occurred.\n @return cl_error_t       CL_ENULLARG null arguments were provided."]
    pub fn cl_engine_set_str(
        engine: *mut cl_engine,
        field: cl_engine_field,
        str_: *const ::std::os::raw::c_char,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Get a string engine option.\n\n @param engine            An initialized scan engine.\n @param cl_engine_field   A CL_ENGINE option.\n @param err               (optional) A cl_error_t status code.\n @return const char *     The string option value."]
    pub fn cl_engine_get_str(
        engine: *const cl_engine,
        field: cl_engine_field,
        err: *mut ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " @brief Copy the settings from an existing scan engine.\n\n The cl_settings pointer is allocated and must be freed with cl_engine_settings_free().\n\n @param engine                An configured scan engine.\n @return struct cl_settings*  The settings."]
    pub fn cl_engine_settings_copy(engine: *const cl_engine) -> *mut cl_settings;
}
extern "C" {
    #[doc = " @brief Apply settings from a settings structure to a scan engine.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine        A scan engine.\n @param settings      The settings.\n @return cl_error_t   CL_SUCCESS if successful.\n @return cl_error_t   CL_EMEM if a memory allocation error occurred."]
    pub fn cl_engine_settings_apply(
        engine: *mut cl_engine,
        settings: *const cl_settings,
    ) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Free a settings struct pointer.\n\n @param settings      The settings struct pointer.\n @return cl_error_t   CL_SUCCESS if successful.\n @return cl_error_t   CL_ENULLARG null arguments were provided."]
    pub fn cl_engine_settings_free(settings: *mut cl_settings) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Prepare the scanning engine.\n\n Call this after all required databases have been loaded and settings have\n been applied.\n\n @param engine        A scan engine.\n @return cl_error_t   CL_SUCCESS if successful.\n @return cl_error_t   CL_ENULLARG null arguments were provided."]
    pub fn cl_engine_compile(engine: *mut cl_engine) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Add a reference count to the engine.\n\n Thread safety mechanism so that the engine is not free'd by another thread.\n\n The engine is initialized with refcount = 1, so this only needs to be called\n for additional scanning threads.\n\n @param engine        A scan engine.\n @return cl_error_t   CL_SUCCESS if successful.\n @return cl_error_t   CL_ENULLARG null arguments were provided."]
    pub fn cl_engine_addref(engine: *mut cl_engine) -> cl_error_t;
}
extern "C" {
    #[doc = " @brief Free an engine.\n\n Will lower the reference count on an engine. If the reference count hits\n zero, the engine will be freed.\n\n @param engine        A scan engine.\n @return cl_error_t   CL_SUCCESS if successful.\n @return cl_error_t   CL_ENULLARG null arguments were provided."]
    pub fn cl_engine_free(engine: *mut cl_engine) -> cl_error_t;
}
#[doc = " @brief Pre-cache callback.\n\n Called for each processed file (both the entry level - AKA 'outer' - file and\n inner files - those generated when processing archive and container files), before\n the actual scanning takes place.\n\n @param fd        File descriptor which is about to be scanned.\n @param type      File type detected via magic - i.e. NOT on the fly - (e.g. \"CL_TYPE_MSEXE\").\n @param context   Opaque application provided data.\n @return          CL_CLEAN = File is scanned.\n @return          CL_BREAK = Allowed by callback - file is skipped and marked as clean.\n @return          CL_VIRUS = Blocked by callback - file is skipped and marked as infected."]
pub type clcb_pre_cache = ::std::option::Option<
    unsafe extern "C" fn(
        fd: ::std::os::raw::c_int,
        type_: *const ::std::os::raw::c_char,
        context: *mut ::std::os::raw::c_void,
    ) -> cl_error_t,
>;
extern "C" {
    #[doc = " @brief Set a custom pre-cache callback function.\n\n Caution: changing options for an engine that is in-use is not thread-safe!\n\n @param engine    The initialized scanning engine.\n @param callback  The callback function pointer."]
    pub fn cl_engine_set_clcb_pre_cache(engine: *mut cl_engine, callback: clcb_pre_cache);
}
